--- a/Pj_BIFF/main.css
+++ b/Pj_BIFF/main.css
@@ -288,11 +288,19 @@ body * {
 }
 
 #gosub span {
-    color: rgb(37, 37, 34);
-    display: block;
+    position: relative;
+    color: #a1a1a1;
+    display: inline-block;
     text-align: center;
-    
-    /* font: bold 34px/40px 'Audiowide'; */
+    margin-top: 16px;
+}
+
+.gnb a{
+    color: #fff;
+}
+
+.gnb li:hover{
+    border-bottom: 2px solid #f00;
 }
 
 /******************************************* Cont2 *******************************************/
@@ -534,7 +542,7 @@ body * {
 
 .tbl_schedule .sch_li .sch_li_tit{
     width: 100%;
-    font-size: 18px;
+    font-size: 19px;
     color: #111;
     background: #f5f5f5;
     font-weight: 500;
@@ -588,6 +596,7 @@ body * {
 }
 
 .en{
+    font-size: 27px;
     letter-spacing: 0 !important;
 }
 
