--- a/Pj_BIFF/main.css
+++ b/Pj_BIFF/main.css
@@ -11,8 +11,9 @@ ol {
     padding: 0;
 }
 
-html {
+html,body {
     scroll-behavior: smooth;
+
 }
 
 ul,
@@ -30,9 +31,9 @@ body {
     color: #fafafa;
 }
 
-body * {
-    /* outline: 1px dashed rgb(158, 158, 158); */
-}
+/* body * {
+    outline: 1px dashed rgb(158, 158, 158);
+} */
 
 .ibx {
     max-width: 1300px;
