--- a/Pj_BIFF/main.css
+++ b/Pj_BIFF/main.css
@@ -31,9 +31,9 @@ body {
     color: #fafafa;
 }
 
-/* body * {
+body * {
     outline: 1px dashed rgb(158, 158, 158);
-} */
+}
 
 .ibx {
     max-width: 1300px;
@@ -316,8 +316,8 @@ body {
     width: 700px;
     height: 40px;
     text-align: center;
-    left: 25%;
-    top: 15%;
+    left: 22%;
+    top: 17%;
     font-size: 35px;
 }
 
@@ -428,9 +428,9 @@ body {
     bottom: 45%;
     left: 50%;
     transform: translateX(-50%);
-    width: 95%;
+    width: 100%;
     height: 40%;
-    /* outline: 2px dashed red; */
+    outline: 1px dashed red;
 }
 
 .mlist3-2 {
@@ -438,9 +438,9 @@ body {
     bottom: 5%;
     left: 50%;
     transform: translateX(-50%);
-    width: 95%;
+    width: 100%;
     height: 40%;
-    /* outline: 2px dashed rgb(38, 0, 255); */
+    outline: 1px dashed blue;
 }
 
 .mlist3-1 ul {
@@ -745,7 +745,7 @@ body {
     padding-left: 10px;
     letter-spacing: -0.5px;
     word-break: keep-all;
-    color: #888;
+    color: #686767;
 }
 
 .list_secondary>li:before {
