--- a/Pj_BIFF/main.css
+++ b/Pj_BIFF/main.css
@@ -158,6 +158,17 @@ body * {
 
 }
 
+.menu {
+    width: 45px;
+    height: 45px;
+    text-align: center;
+    font-size: 40px;
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 50%;
+    background-color: rgb(250, 250, 253);
+    padding: 0;
+    cursor: pointer;
+}
 
 .ham {
     position: absolute;
@@ -172,7 +183,7 @@ body * {
 
 }
 
-.xbtn {
+.gnb {
     position: fixed;
     top: -100%;
     /* 높이만큼 위로 올라감(숨겨짐) */
@@ -185,53 +196,14 @@ body * {
     transition: top .8s ease-out;
 }
 
-
-
-.ham.on {
-    top: 0;
-}
-
-.xbtn a {
-    color: #fff;
-    text-decoration: none;
-}
-
-.xbtn ul {
-    position: absolute;
+.gnb.on {
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    /* 가로,세로방향 정중앙이동 */
-
-    width: 800px;
-    margin: 0 auto;
-    /* 포지션이 absolute일때 마영오가 안먹힘 */
-    overflow: hidden;
-    /* float된 자식인식 */
-    /* outline: 2px dotted deeppink; */
-}
-
-/* 상위메뉴 li */
-.xbtn ul>li {
-    float: left;
-    /* 메뉴 옆으로 흐르게 */
-    width: 200px;
-    text-align: center;
-    font-size: 40px;
-    line-height: 2;
-}
-
-/* 하위메뉴 li */
-.xbtn ol>li {
-    font-size: 20px;
-    line-height: 2;
 }
 
 .cbtn {
     position: absolute;
     top: 10px;
     right: 10px;
-    /* 부모는? .gnb */
 
     width: 50px;
     height: 50px;
@@ -244,22 +216,39 @@ body * {
     padding: 0;
 
     cursor: pointer;
-
 }
 
+.gnb a {
+    color: #fff;
+    text-decoration: none;
+}
 
+.gnb ul {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* 가로,세로방향 정중앙이동 */
 
+    width: 800px;
+    margin: 0 auto;
+    overflow: hidden;
+    outline: 2px dotted deeppink;
+}
 
-.menu {
-    width: 45px;
-    height: 45px;
+.gnb ul>li {
+    float: left;
+    /* 메뉴 옆으로 흐르게 */
+    width: 200px;
     text-align: center;
     font-size: 40px;
-    border: 2px solid rgb(0, 0, 0);
-    border-radius: 50%;
-    background-color: rgb(250, 250, 253);
-    padding: 0;
-    cursor: pointer;
+    line-height: 2;
+}
+
+/* 하위메뉴 li */
+.gnb ol>li {
+    font-size: 20px;
+    line-height: 2;
 }
 
 
