--- a/Pj_BIFF/main.css
+++ b/Pj_BIFF/main.css
@@ -291,6 +291,7 @@ body * {
 /******************************************* Cont2 *******************************************/
 .cont2 {
     position: relative;
+    box-sizing: border-box;
 }
 
 .ad1 {
