--- a/003.JS학습/Gurumi_PJ/css/main.css
+++ b/003.JS학습/Gurumi_PJ/css/main.css
@@ -10,6 +10,10 @@ body{
     background: url(../images/bg-main.jpg) no-repeat fixed top/cover;
 }
 
+body * {
+    outline: 1px dashed rgb(158, 158, 158);
+}
+
  /* IR 클래스 */
 .ir{
     display: block;
@@ -36,6 +40,12 @@ body{
     padding-top: 100%;
     /* 정사각형 1:1비율 */
 }
+
+
+
+
+
+
 
 /* 2. 갤러리박스 */
 #gbx{
@@ -90,7 +100,6 @@ body{
     css 필터 속성: 이미지에 변형효과를 준다
     filter: 여러가지 필터(그레이스케일, 블러, 세피아, 콘트라스트 등)
     참조) https://www.w3schools.com/cssref/playit.asp?filename=playcss_filter&preval=none
-
 */
 /* 중앙이미지 */
 .gbx img:nth-child(3) {
@@ -134,6 +143,14 @@ body{
 .lb{
     left: 10%;
 }
+
+
+
+
+
+
+
+
 
 /* 3. 하단부분 */
 #info{
