--- a/Pj_BIFF/main.css
+++ b/Pj_BIFF/main.css
@@ -163,11 +163,12 @@ body * {
     height: 40px;
     text-align: center;
     font-size: 30px;
-    border: 1px solid rgb(0, 0, 0);
+    border: 1px solid transparent;
     border-radius: 50%;
-    background-color: #c6c6c6;
+    background-color: transparent;
     padding: 3px;
     cursor: pointer;
+    color: #fff;
 }
 
 .ham {
@@ -207,7 +208,7 @@ body * {
     height: 40px;
     font-size: 30px;
     color: #fff;
-    border: 1px solid rgb(255, 255, 255);
+    border: 1px solid transparent;
     border-radius: 50%;
     background-color: rgb(0, 0, 0);
     padding: 0;
