--- a/Pj_BIFF/main.css
+++ b/Pj_BIFF/main.css
@@ -30,7 +30,7 @@ body {
 }
 
 body * {
-    outline: 1px dashed rgb(158, 158, 158);
+    /* outline: 1px dashed rgb(158, 158, 158); */
 }
 
 .ibx {
@@ -227,7 +227,7 @@ body * {
     width: 800px;
     margin: 0 auto;
     overflow: hidden;
-    outline: 2px dotted deeppink;
+    /* outline: 2px dotted deeppink; */
 }
 
 .gnb1 ul>li {
@@ -493,7 +493,7 @@ body * {
     transform: translateX(-50%);
     width: 100%;
     height: 40%;
-    outline: 1px dashed red;
+    /* outline: 1px dashed red; */
 }
 
 .mlist3-2 {
@@ -503,7 +503,7 @@ body * {
     transform: translateX(-50%);
     width: 100%;
     height: 40%;
-    outline: 1px dashed blue;
+    /* outline: 1px dashed blue; */
 }
 
 .mlist3-1 ul {
