--- a/Pj_BIFF/sub1.css
+++ b/Pj_BIFF/sub1.css
@@ -251,7 +251,12 @@ body * {
 .cont1 {
     position: relative;
 }
+/******************************************* Cont1 *******************************************/
 
+
+
+
+/******************************************* 메인화면 *******************************************/
 .subposter {
     width: 100%;
     height: 100%;
@@ -260,7 +265,21 @@ body * {
     text-align: center;
 }
 
+.backmain{
+    position: relative;
+}
 
+.back{
+    position: absolute;
+    top: 50px;
+    left: 0;
+    z-index: 99;
+    background-image: url(./img/3list.png) no-repeat;
+    background-position-y: 3px;
+    padding-left: 25px;
+    color: #fff;
+}
+/******************************************* 메인화면 *******************************************/
 
 
 /******************************************* 하단 *******************************************/
