--- a/Pj_BIFF/sub1.css
+++ b/Pj_BIFF/sub1.css
@@ -271,12 +271,12 @@ body * {
 
 .back{
     position: absolute;
-    top: 50px;
-    left: 0;
+    top: 100px;
+    left: 5%;
     z-index: 99;
     background: url(./img/3list.png) no-repeat;
     padding-left: 25px;
-    background-position-y: 4px;
+    background-position-y: 2px;
     color: #fff;
 }
 /******************************************* 메인화면 *******************************************/
