--- a/Pj_BIFF/main.css
+++ b/Pj_BIFF/main.css
@@ -229,7 +229,7 @@ body * {
 .gnb1 ul>li {
     display: flex;
     flex-direction: column;
-    width: 20%;
+    width: 324px;
     text-align: center;
     font-size: 40px;
     line-height: 2;
@@ -241,7 +241,7 @@ body * {
 }
 
 .gnb1>ul>li a{
-    width: 20%;
+    width: 324px;
     display: block;
     /* height: 50px; */
     transition: .4s;
