--- a/001.HTML/008.VOGUE_PJ/002.site/css/gallery.css
+++ b/001.HTML/008.VOGUE_PJ/002.site/css/gallery.css
@@ -7,13 +7,13 @@
 @import url(common.css);
 
 /* 서브 전체박스 */
-.scont{
+.scont {
     margin-bottom: 100px;
     min-height: 500px;
 }
 
 /* 1. 서브타이틀 */
-.stit{
+.stit {
     font-family: 'Pistilli', sans-serif;
     font-size: 50px;
     padding: 40px 0 20px;
@@ -22,19 +22,27 @@
     font-weight: normal;
 }
 
-/* 2. 스와이퍼 세팅 */
-.swiper-container {
+/* 2. 스와이퍼 셋팅 */
+.swiper {
     max-width: 1300px;
     height: 500px;
     margin: 0 auto;
-  }
-  .swiper-slide {
+}
+
+.swiper-slide {
     text-align: center;
     font-size: 18px;
     background: #fff;
-     /* Center slide text vertically */
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     object-fit: cover;
-  }
+
+    /* Center slide text vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
