--- a/Pj_BIFF/css/gallery.css
+++ b/Pj_BIFF/css/gallery.css
@@ -6,43 +6,42 @@
 @import url(core.css);
 @import url(common.css);
 
-/* 서브 전체박스 */
-.scont {
-    margin-bottom: 100px;
-    min-height: 500px;
-}
-
-/* 1. 서브타이틀 */
-.stit {
-    font-family: 'Pistilli', sans-serif;
-    font-size: 50px;
-    padding: 40px 0 20px;
-    /* 위40px 양쪽0 아래20px */
-    text-align: center;
-    font-weight: normal;
-}
-
-/* 2. 스와이퍼 셋팅 */
 .swiper {
-    max-width: 1300px;
-    height: 500px;
-    margin: 0 auto;
-}
-
-.swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-
-    /* Center slide text vertically */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.swiper-slide img {
-    display: block;
     width: 100%;
     height: 100%;
-    object-fit: cover;
-}
+    background: #000;
+  }
+
+  .swiper-slide {
+    font-size: 18px;
+    color: #fff;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 40px 60px;
+  }
+
+  .parallax-bg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 130%;
+    height: 100%;
+    -webkit-background-size: cover;
+    background-size: cover;
+    background-position: center;
+  }
+
+  .swiper-slide .title {
+    font-size: 41px;
+    font-weight: 300;
+  }
+
+  .swiper-slide .subtitle {
+    font-size: 21px;
+  }
+
+  .swiper-slide .text {
+    font-size: 14px;
+    max-width: 400px;
+    line-height: 1.3;
+  }
