--- a/Pj_BIFF/css/main.css
+++ b/Pj_BIFF/css/main.css
@@ -379,26 +379,56 @@ body {
     position: relative;
 }
 
-.ad2 {
-    position: absolute;
-    width: 700px;
-    height: 40px;
-    text-align: center;
-    /* left: calc(50% - 22.5px); */
-    left: 25%;
-    top: 0%;
-    font-size: 35px;
+.dselect{
+    cursor: pointer;
+    user-select: none;
+    /* 선택안되게함 */
+    -webkit-user-drag: none;
+    /* 드래그안되게함 */
 }
 
-.ad3 {
-    position: absolute;
-    width: 700px;
-    height: 40px;
+.cont3 h2{
     text-align: center;
-    /* left: calc(50% - 22.5px); */
-    left: 25%;
-    top: 40%;
-    font-size: 35px;
+    padding-top: 100px;
+    font-size: 4vh;
+}
+
+
+/*움직일 갤러리 화면크기의 부모박스*/
+#handle {
+    top: 5%;
+    position: relative;
+    height: 70%;
+    width: 100%;
+    overflow: hidden;
+
+}
+
+/*갤러리 내용만큼 가로로큰 내부박스-움직일박스*/
+#move {
+    position: absolute;
+    /*            width: 7200px;*/
+    height: 100%;
+}
+
+#move img {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+/*플렉스박스!*/
+#move>ul {
+    display: flex;
+}
+
+#move>ul li {
+    position: relative;
+    width: 300px;
+}
+
+.case{
+    top: 50%;
 }
 
 
@@ -494,6 +524,9 @@ body {
 .film_tit a {
     color: #fff;
 }
+.film_tit{
+cursor: pointer;
+}
 
 .tbl_schedule .sch_li .sch_it .film_tit .film_tit_kor {
     color: #000;
@@ -534,11 +567,11 @@ body {
 }
 
 .ico_grade.ico_15 {
-    background-image: url(./img/ico_15.png);
+    background-image: url(../img/ico_15.png);
 }
 
 .ico_grade.ico_gv {
-    background-image: url(./img/ico_gv.png);
+    background-image: url(../img/ico_gv.png);
 }
 
 .ico_grade {
