--- a/Pj_BIFF/css/swiper.css
+++ b/Pj_BIFF/css/swiper.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-/* VOGUE PJ 갤러리 페이지 CSS - gallery.css */
+/* BIFF PJ CSS - BIFF.css */
 
 /* 외부CSS 합치기 */
 @import url(reset.css);
@@ -18,6 +18,7 @@
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     padding: 40px 60px;
+    top: 5%;
   }
 
   .parallax-bg {
@@ -30,6 +31,8 @@
     background-size: cover;
     background-position: center;
   }
+
+  /* .parallax-bg:nth-child(1) */
 
   .swiper-slide .title {
     font-size: 41px;
