--- a/Pj_BIFF/css/main.css
+++ b/Pj_BIFF/css/main.css
@@ -362,17 +362,83 @@ body {
     position: relative;
 }
 
-.ad1 {
+.swiper {
+    width: 100%;
+    height: 100%;
+    background: #000;
+  }
+
+  .swiper-slide {
+    font-size: 18px;
+    color: #fff;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 40px 60px;
+  }
+
+  .parallax-bg {
     position: absolute;
-    width: 700px;
-    height: 40px;
-    text-align: center;
-    left: 22%;
-    top: 17%;
-    font-size: 35px;
+    left: 0;
+    top: 0;
+    width: 130%;
+    height: 100%;
+    -webkit-background-size: cover;
+    background-size: cover;
+    background-position: center;
+  }
+
+
+  .swiper-slide .title {
+    font-size: 41px;
+    font-weight: 300;
+  }
+
+  .swiper-slide .subtitle {
+    font-size: 21px;
+  }
+
+  .swiper-slide .text {
+    font-size: 14px;
+    max-width: 400px;
+    line-height: 1.3;
+  }
+
+.swiper-slide:nth-of-type(3){
+    background-image: url(../img/03.jpg);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
 }
-
-
+.swiper-slide:nth-of-type(4){
+    background-image: url(../img/04.jpg);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+}
+.swiper-slide:nth-of-type(5){
+    background-image: url(../img/05.jpg);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+}
+.swiper-slide:nth-of-type(6){
+    background-image: url(../img/06.jpg);
+    top: 0;
+    /* left: 0; */
+    /* width: 100%; */
+    /* height: 100%; */
+    background-position: center;
+    background-size: cover;
+}
 
 /******************************************* Cont3 *******************************************/
 .cont3 {
@@ -425,14 +491,13 @@ body {
 
 #move>ul li {
     position: relative;
-    width: 325px;
+    width: 340px;
     height: 300px;
 }
 
 .case{
     top: 50%;
 }
-
 
 /******************************************* Cont4 ******************************************/
 .cont4{
