--- a/Pj_BIFF/css/sub.css
+++ b/Pj_BIFF/css/sub.css
@@ -160,7 +160,7 @@ body {
 
 .gnb2 .lb {
     position: absolute;
-    width: 100px;
+    width: 200px;
     left: 0;
     top: 0;
     margin: 0;
@@ -170,7 +170,7 @@ body {
 
 .gnb2 .rb {
     position: absolute;
-    width: 100px;
+    width: 200px;
     right: 0;
     top: 0;
     margin: 0;
@@ -198,6 +198,9 @@ body {
     display: none;
 }
 .gnb2 .rb li:nth-child(2){
+    display: none;
+}
+.gnb2 .rb li:nth-child(4){
     display: none;
 }
 
