--- a/Pj_BIFF/css/sub.css
+++ b/Pj_BIFF/css/sub.css
@@ -352,6 +352,27 @@ body {
     background-position: center;
     background-size: cover;
   }
+
+  .Mtxt{
+      position: absolute;
+      /* transform: translate(-38vw, 17vw); */
+      top: 75%;
+      left: 3%;
+  }
+
+  .Mtxt li:first-child{
+      font-size: 5vh;
+      font-weight: bold;
+  }
+  .Mtxt li:nth-child(2){
+    font-size: 3vh;
+  }
+  .Mtxt li:nth-child(3){
+    font-size: 1.7vh;
+  }
+  .Mtxt li:last-child{
+    font-size: 1.7vh;
+  }
   
   .play-button {
     width: 152px;
