--- a/Pj_BIFF/css/sub.css
+++ b/Pj_BIFF/css/sub.css
@@ -1,5 +1,10 @@
 @charset "utf-8";
 /******************************************* 공통 *******************************************/
+@import url('https://fonts.googleapis.com/css2?family=Gowun+Batang&display=swap');
+
+/* font-family: 'Gowun Batang', serif; */
+
+
 html,
 body,
 h1,
@@ -13,6 +18,7 @@ ol {
 
 html,body {
     overflow: hidden;
+    font-family: 'Gowun Batang', serif;
 }
 
 a {
@@ -337,7 +343,7 @@ body {
     z-index: 99;
     background: url(../img/3list.png) no-repeat;
     padding-left: 25px;
-    background-position-y: 2px;
+    background-position-y: 6px;
     color: #fff;
 }
 
