--- a/Pj_BIFF/css/main.css
+++ b/Pj_BIFF/css/main.css
@@ -235,7 +235,7 @@ body {
 .gnb1 {
     position: fixed;
     right: -100%;
-    width: 18%;
+    /* width: 20%; */
     height: 100%;
     /* 보이는 화면에 꽉참 */
     background-color: #000;
@@ -272,7 +272,7 @@ body {
 }
 
 .gnb1 ul {
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -458,6 +458,13 @@ body {
     -webkit-user-drag: none;
     /* 드래그안되게함 */
 }
+.dselect1{
+    cursor: pointer;
+    user-select: none;
+    /* 선택안되게함 */
+    -webkit-user-drag: none;
+    /* 드래그안되게함 */
+}
 
 .cont3 h2{
     text-align: center;
@@ -473,12 +480,23 @@ body {
     height: 30%;
     width: 100%;
     overflow: hidden;
-
+}
+#handle1 {
+    top: 5%;
+    position: relative;
+    height: 30%;
+    width: 100%;
+    overflow: hidden;
 }
 
 
 /*갤러리 내용만큼 가로로큰 내부박스-움직일박스*/
 #move {
+    position: absolute;
+               /* width: 7200px; */
+    height: 100%;
+}
+#move1 {
     position: absolute;
                /* width: 7200px; */
     height: 100%;
@@ -489,13 +507,26 @@ body {
     width: 100%;
     height: 100%;
 }
+#move1 img {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
 
 /*플렉스박스!*/
 #move>ul {
     display: flex;
 }
+#move1>ul {
+    display: flex;
+}
 
 #move>ul li {
+    position: relative;
+    width: 340px;
+    height: 300px;
+}
+#move1>ul li {
     position: relative;
     width: 340px;
     height: 300px;
