--- a/Pj_BIFF/css/sub.css
+++ b/Pj_BIFF/css/sub.css
@@ -238,7 +238,7 @@ body {
 .gnb1 {
     position: fixed;
     right: -100%;
-    width: 18%;
+    /* width: 18%; */
     height: 100%;
     /* 보이는 화면에 꽉참 */
     background-color: #000;
@@ -275,7 +275,7 @@ body {
 }
 
 .gnb1 ul {
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -357,6 +357,7 @@ body {
     background-image: url(../img/sub1m.jpg);
     background-position: center;
     background-size: cover;
+    /* filter: brightness(60%); */
   }
 
   .Mtxt{
